# SoCTOPs_Test

./: .gitignore  README.md  pyproject.toml
configs/: benchmark.sample.yaml
scripts/: export_models_torchvision.py
tests/: test_cli_integration.py  test_config.py  test_int8_skip.py  test_metrics.py
tops_bench/: benchmark.py  cli.py  config.py  constants.py  metrics.py  reporting.py  results.py  runner.py
